--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,29 +81,30 @@ jobs:
 
       - name: Upload container to Docker Hub with Push
         run: docker push ${{ secrets.DOCKER_USERNAME }}/playlist-service:latest
-  #apigateway:
-   # runs-on: ubuntu-latest
-#    name: Java 17 build, test, deliver ede-api-gateway container
- #   steps:
-  #    - name: Check out repository
-   #     uses: actions/checkout@v3
+        
+  apigateway:
+    runs-on: ubuntu-latest
+    name: Java 17 build, test, deliver ede-api-gateway container
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-    #  - name: Set up JDK 17
-     #   uses: actions/setup-java@v3
-      #  with:
-       #   java-version: 17
-        #  cache: maven
-         # distribution: adopt
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          cache: maven
+          distribution: adopt
 
-#      - name: Build, test and package project
- #       working-directory: ./api-gateway
-  #      run: mvn package -B -DskipTests
+      - name: Build, test and package project
+        working-directory: ./api-gateway
+        run: mvn package -B -DskipTests
 
-   #   - name: Docker login
-    #    run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Docker login
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-     # - name: Docker Build
-      #  run: docker build --build-arg GOOGLE_CLIENTID=${{ secrets.GOOGLE_CLIENTID }} --build-arg GOOGLE_CLIENTSECRET=${{ secrets.GOOGLE_CLIENTSECRET }} -t ${{ secrets.DOCKER_USERNAME }}/ede-api-gateway:latest ./api-gateway
+      - name: Docker Build
+        run: docker build --build-arg GOOGLE_CLIENTID=${{ secrets.GOOGLE_CLIENTID }} --build-arg GOOGLE_CLIENTSECRET=${{ secrets.GOOGLE_CLIENTSECRET }} -t ${{ secrets.DOCKER_USERNAME }}/ede-api-gateway:latest ./api-gateway
 
-#      - name: Upload container to Docker Hub with Push
- #       run: docker push ${{ secrets.DOCKER_USERNAME }}/ede-api-gateway:latest
+      - name: Upload container to Docker Hub with Push
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/ede-api-gateway:latest
