--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,10 @@
+networks:
+  preference: {}
+  songlibrary: {}
+  playlist: {}
+
+
+
 services:
  mongo-preferences:
   image: mongo:latest
@@ -5,6 +12,8 @@ services:
     - 27017:27017
   volumes:
     - mongodb_preference_data:/data/db
+  networks:
+    - preference
     
  mysql-playlist:
   image: mysql:latest
@@ -14,6 +23,8 @@ services:
     - mysql_playlist_data:/var/lib/mysql
   environment:
    MYSQL_ROOT_PASSWORD: abc123
+  networks:
+    - playlist
     
  mysql-songlibrary:
   image: mysql:latest
@@ -23,6 +34,8 @@ services:
     - mysql_songlibrary_data:/var/lib/mysql
   environment:
    MYSQL_ROOT_PASSWORD: abc123
+  networks:
+    - songlibrary
     
  preference-service:
   depends_on:
@@ -35,6 +48,8 @@ services:
   environment:
    MONGODB_PORT: 27017
    MONGODB_HOST: mongo-preferences
+  networks:
+    - preference
    
  songlibrary-service:
   depends_on:
@@ -49,6 +64,8 @@ services:
    MYSQL_DB_PASSWORD: abc123
    MYSQL_DB_HOST: mysql-songlibrary
    MYSQL_DB_PORT: 3307
+  networks:
+    - songlibrary
 
  playlist-service:
   depends_on:
@@ -69,6 +86,8 @@ services:
    MYSQL_DB_PASSWORD: abc123
    MYSQL_DB_HOST: mysql-playlist
    MYSQL_DB_PORT: 3306
+  networks:
+    - playlist
 
  api-gateway:
    depends_on:
