--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       
       - name: Build, test and package project
         working-directory: ./preference-service
-        run: mvn package -B
+        run: mvn package -DskipTests
 
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build, test and package project
         working-directory: ./songlibrary-service
-        run: mvn package -B
+        run: mvn package -DskipTests
 
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -71,7 +71,7 @@ jobs:
         
       - name: Build, test and package project
         working-directory: ./playlist-service
-        run: mvn package -B
+        run: mvn package -DskipTests
         
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -98,7 +98,7 @@ jobs:
 
       - name: Build, test and package project
         working-directory: ./api-gateway
-        run: mvn package -B -DskipTests
+        run: mvn package -DskipTests
 
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
