--- a/songlibrary-service/src/main/resources/application.properties
+++ b/songlibrary-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_DB_HOST:localhost}:${MYSQL_DB_PORT:3307}/songlibrarydb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_DB_HOST:localhost}:3307/songlibrarydb?createDatabaseIfNotExist=true
 spring.datasource.username=root
+#//${MYSQL_DB_PORT:3307}
 spring.datasource.password=abc123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
