--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -19,13 +19,14 @@ spring:
             - Method=POST
           filters:
             - SetPath=/api/preference
-        - id: preference-service-user
+        - id: preference-service
           uri: http://${PREFERENCE_SERVICE_BASEURL:localhost:8080}
           predicates:
             - Path=/preferences
             - Method=GET
           filters:
             - SetPath=/api/preference
+
         - id: playlist-service-user
           uri: http://${PLAYLIST_SERVICE_BASEURL:localhost:8081}
           predicates:
@@ -38,5 +39,12 @@ spring:
           predicates:
             - Path=/playlists
             - Method=POST
+          filters:
+            - SetPath=/api/playlist
+        - id: playlist-service
+          uri: http://${PLAYLIST_SERVICE_BASEURL:localhost:8081}
+          predicates:
+            - Path=/playlists
+            - Method=DELETE
           filters:
             - SetPath=/api/playlist
