--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -67,3 +67,11 @@ spring:
             - Method=DELETE
           filters:
             - SetPath=/api/playlist
+
+        - id: songlibrary-service
+          uri: http://${SONGLIBRARY_SERVICE_BASEURL:localhost:8082}
+          predicates:
+            - Path=/songs
+            - Method=POST
+          filters:
+            - SetPath=/api/song
