--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build, test and package project
         working-directory: ./songlibrary-service
-        run: mvn package -DskipTests
+        run: mvn clean verify
 
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -71,7 +71,7 @@ jobs:
         
       - name: Build, test and package project
         working-directory: ./playlist-service
-        run: mvn package -DskipTests
+        run: mvn clean verify
         
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
