--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -60,6 +60,13 @@ spring:
             - Method=POST
           filters:
             - SetPath=/api/playlist
+        - id: playlist-service-public
+          uri: http://${PLAYLIST_SERVICE_BASEURL:localhost:8081}
+          predicates:
+            - Path=/playlists/public
+            - Method=GET
+          filters:
+            - SetPath=/api/playlist/public
         - id: playlist-service
           uri: http://${PLAYLIST_SERVICE_BASEURL:localhost:8081}
           predicates:
